--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "dev-network": "./dev-network.sh"
   },
   "dependencies": {
+    "@fontsource-variable/inter": "^5.2.6",
+    "@fontsource/libre-baskerville": "^5.2.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
