Installed FontAwesome Fonts

--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "dev-network": "./dev-network.sh"
   },
   "dependencies": {
+    "@awesome.me/kit-698a354a60": "^1.0.4",
     "@fontsource-variable/inter": "^5.2.6",
     "@fontsource/libre-baskerville": "^5.2.6",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-router-dom": "^7.6.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
