--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "dev-network": "./dev-network.sh"
+    "dev-network": "./dev-network.sh",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@awesome.me/kit-698a354a60": "^1.0.4",
@@ -28,6 +29,7 @@
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
+    "gh-pages": "^6.3.0",
     "globals": "^16.0.0",
     "vite": "^6.3.5"
   }
